remove ok to code tag

--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -220,7 +220,7 @@
 
 
 <div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>need 5 addresses and <a href="/forms/housing/CBLaddress2">textbox on the last one if the applicant need to add more addresses</a> I only coded 2</li>
     </ul>
