--- a/app/views/forms/housing/CBLbabies.html
+++ b/app/views/forms/housing/CBLbabies.html
@@ -63,7 +63,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
    <p>new page - <strong>content has changed </strong></p>
    <p>validation will be needed: <span class="govuk-error-message">Confirm if anyone pregnant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name and due date</span></p>
 </div>
