--- a/app/views/forms/housing/CBLconnection-ER.html
+++ b/app/views/forms/housing/CBLconnection-ER.html
@@ -118,7 +118,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li><strong>sill not sure of some terms here : relation, resident - family, need to check with Housing</strong></li>
       <li>extra textbox for other reason, and another for relative live in area / different label for each though </li>
