--- a/app/views/forms/housing/CBLcurrent-address.html
+++ b/app/views/forms/housing/CBLcurrent-address.html
@@ -112,7 +112,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">OK to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
   <li>this is a new page</li>
   <li>display the address captured previously after homeless question </li>
