--- a/app/views/forms/housing/CBLcurrent.html
+++ b/app/views/forms/housing/CBLcurrent.html
@@ -94,7 +94,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>extra textbox for Different living situation</li>
       <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
