--- a/app/views/forms/housing/CBLdeclaration1-details.html
+++ b/app/views/forms/housing/CBLdeclaration1-details.html
@@ -112,7 +112,7 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
  <li>New, content need to be checked</li>
  <li>validation: <span class="govuk-error-message">Confirm if employee or councillor or related to / Enter job title / Enter first name / Enter last name / Enter relationship to you</span></li>
