--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -59,7 +59,7 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>Done by Sharon, not seen yet by housing</li>
+        <li>Done by Sharon, agreed by housing on the 10/01 meeting</li>
     </ul>
 </div>
 <div class="IT-notes-box">
