--- a/app/views/forms/housing/CBLend.html
+++ b/app/views/forms/housing/CBLend.html
@@ -48,7 +48,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
 </div>
 
 {% endblock %}
