--- a/app/views/forms/housing/CBLextra-reason-abuse.html
+++ b/app/views/forms/housing/CBLextra-reason-abuse.html
@@ -78,7 +78,7 @@ Health, care, social and support needs
     </div>
 </div>
 <div class="IT-notes-box">
-        <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+        <h3 class="govuk-heading-s">IT notes:</h3>
     <p><strong>guidance added if they say yes to the police question</strong></p>
     <p>routing changed, now before medical</p>
     <p>validation: <span class="govuk-error-message">Confirm if harassed, threatened or abused / Confirm if police told</span></p>
