--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -54,7 +54,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>validation: <span class="govuk-error-message">Confirm homeless or at risk</span> <span class="UR-tag red">CHANGED</span> </li>
       <li>yes goes to information screen and the stop you, no let you go through to current address question</li>
