--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>it was one page before with the question about living alone or not is on the next screen now</li>
     </ul>
