--- a/app/views/forms/housing/CBLliving-alone.html
+++ b/app/views/forms/housing/CBLliving-alone.html
@@ -48,7 +48,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>if they say Yes they live alone, they jump to the pregnancy question if they didn't say they are male. If they are male, they jump to your current address, date you moved in etc...</li>
       <li>if they say No, then they will go to the first screen to add person</li>
