--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">OK to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Validation - <span class="govuk-error-message">Confirm if a child sometimes lives with you overnight? </span> <span class="UR-tag red">CHANGED</span></li>
       <li>if they say yes, then enter children one by one - with screen that ask if more to add yes / no </li>
