--- a/app/views/forms/housing/CBLproperty-type.html
+++ b/app/views/forms/housing/CBLproperty-type.html
@@ -88,7 +88,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
     <li>validation: <span class="govuk-error-message">Select at least one type of property - Give details of other type of property</span> <span class="UR-tag red">CHANGED</span></li>
   </ul>
