--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -126,7 +126,7 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>one wording change for homeless</li>
     <li>need at least one checked: Select at least one reason - or need to have a text in the "Give details" textbox for the Other reason option</li>
