--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -75,7 +75,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
   <li>if yes, then we need information in textboxes display</li>
   <li>validation: <span class="govuk-error-message"> Confirm if you live with people who won’t be moving with you / Give details of situation / Give details of anyone not moving</span> <span class="UR-tag red">CHANGED</span></li>
