--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>validation: <span class="govuk-error-message">Confirm if you’re 16 or over</span> <span class="UR-tag red">CHANGED</span></li>
     </ul>
