--- a/app/views/forms/housing/CBL5yearsadd-question.html
+++ b/app/views/forms/housing/CBL5yearsadd-question.html
@@ -62,7 +62,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes: </h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>Validation: <span class="govuk-error-message">Confirm if need to add past address</span> <span class="UR-tag red">CHANGED</span></li>
     <li>if yes, goes to ask first previous address</li>
