--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -174,7 +174,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Validation - name, relation are not empty: <span class="govuk-error-message">Enter first name - Enter last name  - Enter relationship</span></li>
       <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
