--- a/app/views/forms/housing/CBLaddress.html
+++ b/app/views/forms/housing/CBLaddress.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">OK to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes: </h3>
   <ul class="govuk-list govuk-list--bullet">
   <li>text for address, mentions postcode now</li>
   <li>validation: <span class="govuk-error-message">Enter current address including postcode</span> <span class="UR-tag red">CHANGED</span></li>
