--- a/app/views/forms/housing/CBLareas-info.html
+++ b/app/views/forms/housing/CBLareas-info.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>Guidance on it's own page now. Was on the next page before</li>
 
