--- a/app/views/forms/housing/CBLbedroom-used.html
+++ b/app/views/forms/housing/CBLbedroom-used.html
@@ -105,7 +105,7 @@
 
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
    <p>Only seen if they said they were sharing with other not moving with them, next they move to reasons for leaving</p>
    <p>validation: <span class="govuk-error-message">Confirm how many double bedrooms / Confirm how many single bedrooms</span></p>
 </div>
