--- a/app/views/forms/housing/CBLcontact.html
+++ b/app/views/forms/housing/CBLcontact.html
@@ -122,7 +122,7 @@
     <p>We want the person to be able to add a different address if for whatever reason they don't want to use their home address</p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>new field to ask for another address if option selected - two buttons have wording changed</li>
     <li>email now shown all the time and if selected we asked them to enter it</li>
