--- a/app/views/forms/housing/CBLgender.html
+++ b/app/views/forms/housing/CBLgender.html
@@ -72,7 +72,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Text to describe gender is not mandatory - in summary on further screens we will display the description if provided, or just display "Other" if not</li>
       <li>Validation: none on the description - if no selection: <span class="govuk-error-message">Enter gender</span></li>
