--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -66,7 +66,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes: </h3>
   <p>wording is different - now asking WILL live with you</p>
   <p>validation: <span class="govuk-error-message">Confirm if anyone under immigration control </span> <span class="UR-tag red">CHANGED</span></p>
   <p>+ if yes and empty<span class="govuk-error-message">Give details about anyone under immigration control </span> <span class="UR-tag red">CHANGED</span></p>
