--- a/app/views/forms/housing/CBLjoint-info.html
+++ b/app/views/forms/housing/CBLjoint-info.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
    <p>new page </p>
    <p>validation <span class="govuk-error-message">Confirm if joint applicant at same addresses</span></p>
 </div>
