--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -71,7 +71,7 @@
    <p>In some very rare cases, there can be more than one joint applicant on the lease. Most of the time, it's added after the start of the lease. We would catch this as there would be more than one name in the box. We would not ask for extra 5 years of addresses for a 3rd applicant</p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes: </h3>
    <p><strong>content has changed</strong></p>
    <p>validation will be needed: <span class="govuk-error-message">Confirm if joint applicant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name</span>  </p>
    <p>WARNING: You only see this screen if the user didn't say they live alone!</p>
