--- a/app/views/forms/housing/CBLlegal.html
+++ b/app/views/forms/housing/CBLlegal.html
@@ -129,7 +129,7 @@
 </div>
 
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>validation: <span class="govuk-error-message">Confirm if legal action taken for breaking tenancy agreement / Give details of legal action</span> <span class="UR-tag red">CHANGED</span></li>
       <li>validation: <span class="govuk-error-message">Confirm if ASBO given  / Give details of ASBO</span> <span class="UR-tag red">CHANGED</span></li>
