--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -68,7 +68,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <p><strong> change of wording: "another property" instead of 'it'</strong></p>
     <p>validation: <span class="govuk-error-message">Confirm if you rent or own another property</span> <span class="UR-tag red">CHANGED</span></p>
 </div>
