--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,39 +1,29 @@
-
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Homepage ERC
+  Forms
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        Homepage
+        Housing Forms
       </h1>
-      <p>
-        We can create forms, patterns and show our work. <br><span style="color:#b10e1e ">By clicking/tapping on the ERC logo on any page</span>, you will get back to this homepage.
+      <p class="govuk-body-l">
+        These forms are not the final version but should be close enough
       </p>
-    
-      <h2 class="govuk-heading-m">From here you can access:</h2>
+
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="components/menu-components.html">a list components</a></li>
-        <li><a href="patterns/menu-patterns.html">a list patterns</a></li>
-        <li><a href="forms/menu-forms.html">a list of forms</a></li>
-        <li><a href="colours.html">colours</a></li>
-        <li><a href="useful-links.html">useful links</a></li>
-        <li><a href="support.html">supporting documents</a></li>
+        <li><a href="forms/housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Choice Based Letting</a>
+          <br><strong class="govuk-tag info">last update:</strong><strong> 10/01 afternoon</strong><br><br>
+        <li><a href="forms/equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity questionnaire</a><br>
+           <strong class="govuk-tag info">last update:</strong>  <strong>08/01 evening</strong><br>
+        See the flow of screens of latest version <a href="{{ asset_path }}/images/equality-diversity-questionnaire3.pdf" target="_blank">as a PDF</a></li><br>
       </ul>
 
     </div>
 </div>
-
-<script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
-<script>
-  var myLandbotLivechat = new LandbotLivechat({
-    index: 'https://landbot.io/u/H-97262-YRS0QP9AAV8IXYGH/index.html',
-  });
-</script>
 
 {% endblock %}
