--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,40 +1,28 @@
-
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  Forms
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-        ERC prototype using the GOV.UK Prototype Kit
-        <span class="govuk-caption-l">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
-      <p>
-        This kit lets you rapidly create HTML prototypes using GDS principles.
+        Housing Forms
+      </h1>
+      <p class="govuk-body-l">
+        These forms are not the final version but should be close enough
       </p>
 
-      <h2 class="govuk-heading-m">About this page</h2>
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
-
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-      <p><a href="home.html">Go to homepage of ERC prototype</a></p>
-
-      <h2 class="govuk-heading-m">Examples and documentation</h2>
-
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
-        <li>
-          <a href="https://design-system.service.gov.uk">
-            GOV.UK Design System
-          </a>
-        </li>
+        <li><a href="forms/housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Choice Based Letting</a>
+          <br><strong class="govuk-tag info">last update:</strong><strong> 10/01 afternoon</strong><br><br>
+        <li><a href="forms/equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity questionnaire</a><br>
+           <strong class="govuk-tag info">last update:</strong>  <strong>08/01 evening</strong><br>
+        See the flow of screens of latest version <a href="{{ asset_path }}/images/equality-diversity-questionnaire3.pdf" target="_blank">as a PDF</a></li><br>
       </ul>
+
     </div>
 </div>
 
