--- a/app/views/forms/equal-opportunities/disability.html
+++ b/app/views/forms/equal-opportunities/disability.html
@@ -67,10 +67,10 @@ Disability - Equality and diversity
 
     </div>
 </div>
-<!--div class="IT-notes-box">
+<div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
       <li>No validation of the radio buttons</li>
   </ul>
-</div-->
+</div>
 {% endblock %}
