--- a/app/views/forms/equal-opportunities/identity.html
+++ b/app/views/forms/equal-opportunities/identity.html
@@ -87,7 +87,7 @@ Identity - Equality and diversity
 </div>
 <br>
 <br>
-<!--div class="design-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>alphabetical order is the most neutral, but would need to be tested</li>
@@ -99,5 +99,5 @@ Identity - Equality and diversity
     <li>no validation - they can move on even if they don't select anything</li>
     <li>Other open a text box, but can stay empty - no validation</li>
     </ul>
-</div-->
+</div>
 {% endblock %}
