--- a/app/views/forms/equal-opportunities/orientation.html
+++ b/app/views/forms/equal-opportunities/orientation.html
@@ -71,7 +71,7 @@ Sexual orientation - Equality and diversity
 
     </div>
 </div>
-<!--div class="design-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>sorted in alphabetical order - to test</li>
@@ -82,6 +82,6 @@ Sexual orientation - Equality and diversity
     <ul class="govuk-list govuk-list--bullet">
     <li>no validation at all, just a textbox opens if select: Other</li>
     </ul>
-  </div-->
+  </div>
 
 {% endblock %}
