--- a/app/views/forms/equal-opportunities/ethnic-origin-simple.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin-simple.html
@@ -100,7 +100,7 @@ Ethnic group - Equality and diversity
 </div>
 <br>
 <br>
-<!--div class="design-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
         <li><strong>This is a simplified screen - we were asking more in subcategories which were mixing identity and ethnic group for White but not for others  - This screen would require keeping the previous screen on identity</strong></li>
@@ -113,7 +113,7 @@ Ethnic group - Equality and diversity
     <ul class="govuk-list govuk-list--bullet">
         <li>all 'Other' buttons opens a text box, No validation of the textboxes or that a button has been selected</li>
     </ul>
-</div-->
+</div>
 
 
 {% endblock %}
