--- a/app/views/forms/equal-opportunities/start1.html
+++ b/app/views/forms/equal-opportunities/start1.html
@@ -32,7 +32,7 @@ Equality and diversity
 </div>
 <br>
 <br>
-<!--div class="design-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
@@ -47,5 +47,5 @@ Equality and diversity
     <h3 class="govuk-heading-s">Content notes:</h3>
     <p>example from the Samaritans: <br>
         We are committed to increasing diversity among our volunteers. If you'd like to tell us about your background and identity then we'll use this information to track how we're doing. This is entirely optional and has no effect on your application.</p>
-</div-->
+</div>
 {% endblock %}
