last content changes in and tidy up the notes at the bottom of pages

--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -47,7 +47,7 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: <span class="govuk-error-message">Confirm if you’re 16 or over</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if you’re 16 or over</span> </li>
     </ul>
 </div>
 
