--- a/app/views/forms/housing/CBLaddress.html
+++ b/app/views/forms/housing/CBLaddress.html
@@ -27,7 +27,7 @@
           value: data['postcode'],
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Enter address. Including postcode if you know it."
+            text: "Enter address. Include postcode if you know it."
           }
         }) }}
 
@@ -43,7 +43,7 @@
   <h3 class="govuk-heading-s">IT notes: </h3>
   <ul class="govuk-list govuk-list--bullet">
   <li>text for address, mentions postcode now</li>
-  <li>validation: <span class="govuk-error-message">Enter current address including postcode</span> <span class="UR-tag red">CHANGED</span></li>
+  <li>validation: <span class="govuk-error-message">Enter current address including postcode</span></li>
   </ul>
 </div>
 
