--- a/app/views/forms/housing/CBLapplicant.html
+++ b/app/views/forms/housing/CBLapplicant.html
@@ -8,7 +8,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing <span class="UR-tag red">NEW</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -45,9 +45,9 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag red">NEW - to be discussed</span></h3>
+  <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: <span class="govuk-error-message">Confirm if you’re the person applying</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm you’re the person applying</span></li>
     </ul>
 </div>
 
