--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing 
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <div class="govuk-form-group">
@@ -195,7 +195,6 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li> Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
     <li>Select at least one</li>
     <li>Guidance moved to the previous page</li>
     <li>validation: <span class="govuk-error-message">Select at least one area</span></li>
