--- a/app/views/forms/housing/CBLbabies.html
+++ b/app/views/forms/housing/CBLbabies.html
@@ -64,8 +64,7 @@
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
-   <p>new page - <strong>content has changed </strong></p>
-   <p>validation will be needed: <span class="govuk-error-message">Confirm if anyone pregnant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name and due date</span></p>
+   <p>validation: <span class="govuk-error-message">Confirm if anyone pregnant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name and due date</span></p>
 </div>
 
 {% endblock %}
