--- a/app/views/forms/housing/CBLconfirmation-post.html
+++ b/app/views/forms/housing/CBLconfirmation-post.html
@@ -22,7 +22,7 @@
                 We’ll send you confirmation of this by post within  <strong>3 working days</strong>
             </div>
           </div>
-          <p>Thank you for submitting your housing registration form.</p>
+          <p>Thank you for submitting your council house application form. </p>
 
           {% if data['priority'] == 'no'%}
           <div class="govuk-warning-text govuk-!-margin-bottom-5">
@@ -52,7 +52,7 @@
               <p>We'll:</p>
               <ul class="govuk-list govuk-list--bullet">
                   <li>process your application within 21 days of getting all the information we need</li>
-                  <li>let you know where you are on the priority list</li>
+                  <li>tell you your priority group </li>
                   <li>explain how to bid for available homes</li>
                   <li>invite you to discuss your chances of getting a house and your options</li>
               </ul>
@@ -70,13 +70,6 @@
 </div>
 <div class="alt-notes-box">
 <p><a href="/forms/housing/CBLconfirmation-email">see with an email</a> - - - <a href="/forms/housing/CBLconfirmation-post">see when we send by post</a></p>
-</div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p><strong>could we have a pdf or something the user can print or download?</strong></p>
-    <p>could we prompt the user to fill in a medical priority application depending on what they selected in the form - send the pdf in the confirmation email maybe?</p>
-    <p>Housing doesn't want a reference number here, they have their own reference number</p>
-    <p>might to say they will receive information via MAIL</p>
 </div>
 
 
