--- a/app/views/forms/housing/CBLcurrent.html
+++ b/app/views/forms/housing/CBLcurrent.html
@@ -96,11 +96,9 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>extra textbox for Different living situation</li>
+     
       <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
-      <li>Select at least one - Give details (for Other)</li>
-      <li>word association added after housing in 2nd checkbox</li>
-      <li>validation: <span class="govuk-error-message">Select at least one living situation - Give details of other living situation</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>validation: <span class="govuk-error-message">Select at least one living situation - Give details of other living situation</span> </li>
     </ul>
 </div>
 
