--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag amber">CHANGED</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <form class="form" method="post">
@@ -48,8 +48,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>flow changed: monitor info is removed</li>
-    <li>word changed: of East Renfrewshire, instead of 'or'</li>
+
     <li>this is now just a yes no question, if yes, goes to another screen where we will collect more details, and no goes to abuse question</li>
     <li>validation: <span class="govuk-error-message">Confirm if employee or councillor or related to</span></li>
     </ul>
