--- a/app/views/forms/housing/CBLextra-reason-medical.html
+++ b/app/views/forms/housing/CBLextra-reason-medical.html
@@ -9,13 +9,13 @@ Health, care, social and support needs
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing 
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <form class="form" method="post">
         {% set medicalFormHtml %}
-        <p>You will need to complete a separate Medical Priority Assessment Form.</p>
-        <p>We will provide a link to it once you submit this form.</p>
+        <p>You’ll need to complete a separate medical priority application form.</p>
+        <p>We’ll give you a link to it once you submit this form.</p>
         {% endset %}
 
         {% set medicalHtml %}
@@ -85,7 +85,6 @@ Health, care, social and support needs
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
-    <p><strong>guidance added if they say no to the medical form question</strong></p>
     <p>routing changed now after the abuse question - so it's closer to the end and the guidance is still in mind.</p>
     <p>validation: <span class="govuk-error-message">Confirm if physical or mental health need / Confirm if medical priority application completed</span></p>
 </div>
