--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -47,17 +47,11 @@
       <form class="form" method="post">
     </div>
 </div>
-<div class="UR-notes-box">
-  <h3 class="govuk-heading-s">UR notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>This is a new question, and if you say yes then the next screen will explain, then will take you out of the form and make you contact Housing</li>
-    </ul>
-</div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: <span class="govuk-error-message">Confirm homeless or at risk</span> <span class="UR-tag red">CHANGED</span> </li>
-      <li>yes goes to information screen and the stop you, no let you go through to current address question</li>
+      <li>validation: <span class="govuk-error-message">Confirm homeless or at risk</span></li>
+      <li>Yes goes to information screen and then stops you, No let you go through to current address question</li>
     </ul>
 </div>
 {% endblock %}
