--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -72,8 +72,7 @@
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes: </h3>
-   <p><strong>content has changed</strong></p>
-   <p>validation will be needed: <span class="govuk-error-message">Confirm if joint applicant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name</span>  </p>
+   <p>validation: <span class="govuk-error-message">Confirm if joint applicant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name</span>  </p>
    <p>WARNING: You only see this screen if the user didn't say they live alone!</p>
 </div>
 {% endblock %}
