--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing <span class="UR-tag red">CHANGED</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -53,7 +53,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Validation - <span class="govuk-error-message">Confirm if a child sometimes lives with you overnight? </span> <span class="UR-tag red">CHANGED</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if a child sometimes lives with you overnight? </span> </li>
       <li>if they say yes, then enter children one by one - with screen that ask if more to add yes / no </li>
       <li>if they say no, they jump to current address screen</li>
     </ul>
