--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing <span class="UR-tag red">CHANGED</span>
+        Apply online for council housing 
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 {% from "radios/macro.njk" import govukRadios %}
@@ -22,7 +22,7 @@
   name: "properties-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Enter address. Including postcode if you know it."
+    text: "Enter address. Include postcode if you know it."
   }
 }) }}
 {% endset -%}
@@ -69,7 +69,6 @@
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
-    <p><strong> change of wording: "another property" instead of 'it'</strong></p>
     <p>validation: <span class="govuk-error-message">Confirm if you rent or own another property</span> <span class="UR-tag red">CHANGED</span></p>
 </div>
 
