--- a/app/views/forms/housing/CBLrep-info.html
+++ b/app/views/forms/housing/CBLrep-info.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">NEW</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
@@ -20,7 +20,7 @@
             name: "info-who-help",
             id: "info-who-help",
             label: {
-            text: "Tell us who you are, your relationship to the person applying and your contact details if you want us to contact you",
+            text: "Tell us who you are and your relationship to the person applying. Include your contact details if we can contact you about the application. ",
             classes: "govuk-!-font-size-24"
             }
         }) }}
@@ -61,7 +61,7 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag red">NEW - to be discussed</span></h3>
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
         <li>validation <span class="govuk-error-message">Check box to confirm you have permission to apply for this person</span></li>
     </ul>
