--- a/app/views/forms/housing/CBLsummary-aboutyou.html
+++ b/app/views/forms/housing/CBLsummary-aboutyou.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag red">CHANGED for email</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <h2 class="govuk-heading-m">
@@ -59,7 +59,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Edit details takes you back to the page "about you" with name , phone and email</li>
+      <li>Edit details takes you back to the page "about you" with name and phone</li>
       <li>gender: display Female, or Male or Other, if description of gender is provided then display it INSTEAD of Other</li>
       <li>the title is now added and will be at the start of the name for example: <strong>Name : Mr Bob Test</strong></li>
       <li>if email was preferred, it needs to be displayed, same if other address, or power of attorney</li>
