--- a/app/views/forms/housing/CBLwhat-next.html
+++ b/app/views/forms/housing/CBLwhat-next.html
@@ -21,7 +21,7 @@
       <p>We'll:</p>
       <ul class="govuk-list govuk-list--bullet">
           <li>process your application within 21 days of getting all the information we need</li>
-          <li>let you know where you are on the priority list</li>
+          <li>tell you your priority group </li>
           <li>explain how to bid for available homes</li>
           <li>invite you to discuss your chances of getting a house and your options</li>
       </ul>
