--- a/app/views/forms/equal-opportunities/disability.html
+++ b/app/views/forms/equal-opportunities/disability.html
@@ -38,7 +38,7 @@ Disability - Equality and diversity
           name: "disability",
           fieldset: {
             legend: {
-              text: "Do you have a disability or mental health issue?",
+              text: "Do you have a disability or mental health condition?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
