--- a/app/views/forms/housing/CBL5yearsadd-joint.html
+++ b/app/views/forms/housing/CBL5yearsadd-joint.html
@@ -21,7 +21,7 @@
         {% from "input/macro.njk" import govukInput %}
         {{ govukInput({
           label: {
-            text: "Enter address. Including postcode if you know it."
+            text: "Enter address. Include postcode if you know it."
           },
           id: "addr1-joint",
           name: "addr1-joint",
