--- a/app/views/forms/housing/CBL5yearsadd-question.html
+++ b/app/views/forms/housing/CBL5yearsadd-question.html
@@ -54,17 +54,10 @@
 </div>
 
 
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-    <li>This is a new screen</li>
-    <li>the applicant might have lived at the same address for the last 5 years and might not have any other addresses to add</li>
-    </ul>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes: </h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>Validation: <span class="govuk-error-message">Confirm if need to add past address</span> <span class="UR-tag red">CHANGED</span></li>
+    <li>Validation: <span class="govuk-error-message">Confirm if need to add past address</span> </li>
     <li>if yes, goes to ask first previous address</li>
     <li>if no, then if there is no joint applicant, goes to the legal questions, if there is one then ask about same addresses for the joint or not</li>
     </ul>
