--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -129,7 +129,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their address. Including postcode if you know it."
+          text: "Enter their address. Include postcode if you know it."
         },
         id: "child-add1",
         name: "child-add1",
@@ -180,7 +180,7 @@
       <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
       <li>need to pick one Gender, but description if Other is optional - <span class="govuk-error-message">Enter gender</span></li>
       <li>address - <span class="govuk-error-message">Enter address</span></li>
-      <li>Validation - <span class="govuk-error-message">Confirm if need to add another child</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if need to add another child</span> </li>
       <li>same for all other screens for child 2 etc....</li>
       <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLadd-child2-loop">Tell us about anyone else you didn't add yet (if applicable)</a></li>
     </ul>
