--- a/app/views/forms/housing/CBLaddress2-loop-joint.html
+++ b/app/views/forms/housing/CBLaddress2-loop-joint.html
@@ -24,7 +24,7 @@
         {% from "input/macro.njk" import govukInput %}
         {{ govukInput({
           label: {
-            text: "Enter address. Including postcode if you know it."
+            text: "Enter address. Include postcode if you know it."
           },
           id: "addr2-joint",
           name: "addr2-joint",
