--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -104,8 +104,11 @@
         id: "more-detail",
         classes: "govuk-!-width-two-thirds",
         label: {
-          text: "Tell us anything else you want us to know about sleeping arrangements",
+          text: "Tell us anything else you want to know about sleeping arrangements",
           classes:"govuk-!-font-size-24"
+        },
+        hint: {
+          text: "For example, someone sleeping on the sofa or a parent sharing with a child. "
         }
       }) }}
 
@@ -123,8 +126,7 @@
 
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
-   <p>This screen was routing to the 5 years of addresses previously, but this screen has moved to earlier in the form</p> 
-   <p>If they said they were sharing with other not moving with them, then they will see another question about bed used, if not they move to reasons for leaving</p>
+   <p>Routing: If they said they were sharing with other not moving with them on a previous screen, then they will see another question about beds used, if not they move to reasons for leaving</p>
    <p>validation: <span class="govuk-error-message">Confirm how many double bedrooms / Confirm how many single bedrooms</span></p>
    <p>There is no validation in the last big textbox, it's optional and can stay empty. We just don't mention "optional" anymore as some users would not even read if they see "optional"</p>
 </div>
