--- a/app/views/forms/housing/CBLconfirmation-email.html
+++ b/app/views/forms/housing/CBLconfirmation-email.html
@@ -23,7 +23,7 @@
                 If you don’t get a confirmation email check your spam or junk folder.
             </div>
           </div>
-          <p>Thank you for submitting your housing registration form.</p>
+          <p>Thank you for submitting your council house application form. </p>
 
           {% if data['priority'] == 'no'%}
           <div class="govuk-warning-text govuk-!-margin-bottom-5">
@@ -53,7 +53,7 @@
               <p>We'll:</p>
               <ul class="govuk-list govuk-list--bullet">
                 <li>process your application within 21 days of getting all the information we need</li>
-                <li>let you know where you are on the priority list</li>
+                <li>tell you your priority group </li>
                 <li>explain how to bid for available homes</li>
                 <li>invite you to discuss your chances of getting a house and your options</li>
               </ul>
@@ -73,19 +73,12 @@
 <div class="alt-notes-box">
 <p><a href="/forms/housing/CBLconfirmation-email">see with an email</a> - - - <a href="/forms/housing/CBLconfirmation-post">see when we send by post</a></p>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p><strong>could we have a pdf or something the user can print or download?</strong></p>
-    <p>could we prompt the user to fill in a medical priority application depending on what they selected in the form - send the pdf in the confirmation email maybe?</p>
-    <p>Housing doesn't want a reference number here, they have their own reference number</p>
-    <p>might to say they will receive information via MAIL</p>
-</div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">Email text to send</span></h3>
   <ul class="govuk-list">
     <li>Thank you for applying for council housing.</li>
     <li>We’ll write to you within 21 days.</li>
-    <li>The letter will confirm your housing registration number and priority on the housing list.</li>
+    <li>The letter will confirm your housing registration number and tell you your priority group.</li>
     <li>We may contact you sooner if we need extra information.</li>
     <li>Housing Services</li>
   </ul>
