--- a/app/views/forms/housing/CBLconnection-ER.html
+++ b/app/views/forms/housing/CBLconnection-ER.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing <span class="UR-tag red">CHANGED</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 {% from "checkboxes/macro.njk" import govukCheckboxes %}
@@ -110,21 +110,13 @@
 
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>if they select "Relative lives in area" , or "Support to or from a resident" we need a textbox for them to enter the name and address</li>
-  
-    </ul>
-</div>
+
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li><strong>sill not sure of some terms here : relation, resident - family, need to check with Housing</strong></li>
       <li>extra textbox for other reason, and another for relative live in area / different label for each though </li>
-      <li>we need at least one checked, and if open a text box, then it needs not to be empty</li>
-      <li>there are two new checkboxes in the list (at the top and one at the bottom) and some content changes on the existing ones</li>
-      <li>validation: <span class="govuk-error-message">Select at least one connection - Enter details of relative - Enter details of other connection</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>we need at least one checked, and if opens a text box, then it needs not to be empty</li>
+      <li>validation: <span class="govuk-error-message">Select at least one connection - Enter details of relative - Enter details of other connection</span> </li>
     </ul>
 </div>
 {% endblock %}
