--- a/app/views/forms/housing/CBLcontact1.html
+++ b/app/views/forms/housing/CBLcontact1.html
@@ -34,7 +34,7 @@
           name: "other-add",
           value: data['other-add'],
           label: {
-            text: "Enter other address. Including postcode if you know it."
+            text: "Enter other address. Include postcode if you know it."
           }
         }) }}
         {% endset -%}
