--- a/app/views/forms/housing/CBLcurrent-address.html
+++ b/app/views/forms/housing/CBLcurrent-address.html
@@ -104,19 +104,11 @@
 </div>
 
 
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-    <li>possible way to start asking for 5 years of addresses. We give more explanations on this page so the user understand how this work for the other addresses. On the next we ask for past addresses</li>
-    <li>as we don't ask for a precise date with 3 boxes anymore, we can't test if they have been at this address for more than 5 years so can't bypass the next page...</li>
-    </ul>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-  <li>this is a new page</li>
-  <li>display the address captured previously after homeless question </li>
-  <li>validation: <span class="govuk-error-message">Enter move in date / Confirm occupant type / Give details about occupant type</span><span class="UR-tag red">CHANGED</span></li>
+  <li>display the address captured previously after homeless question - bold ideally but ok if not possible </li>
+  <li>validation: <span class="govuk-error-message">Enter move in date / Confirm occupant type / Give details about occupant type</span></li>
     </ul>
 </div>
 
