--- a/app/views/forms/housing/CBLdeclaration2-error.html
+++ b/app/views/forms/housing/CBLdeclaration2-error.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <h2 class="govuk-heading-m">
@@ -18,7 +18,7 @@
         <p>Applies to you and anyone on the application:</p> 
         <ul class="govuk-list govuk-list--bullet">
             <!--li>I’m eligible to apply for housing</li--> 
-            <li>I’ll tell you if my situation change</li> 
+            <li>I’ll tell you if my situation changes</li> 
             <li>I’ll give true information</li> 
             <li>I understand you’ll cancel my application if I give false information or withhold information</li>
             <li>I understand you may end my tenancy and evict me if you offer me a house based on false or withheld information</li> 
@@ -50,6 +50,7 @@
             ]
             }) }}
 
+
         {{ govukButton({
           text: "Continue",
           classes: "button-primary"
@@ -61,16 +62,15 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>Done by Sharon, not seen yet by housing</li>
+        <li>Done by Sharon, agreed by housing on the 10/01 meeting</li>
     </ul>
 </div>
-<div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">OK to code now (03/01)</span></h3>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
         <li><strong>Screen moved at the start to avoid losing too much progress if they click on the link to view the GDPR</strong></li>
     </ul>
 </div>
-    
     
 
 {% endblock %}
