--- a/app/views/forms/housing/CBLemail-text.html
+++ b/app/views/forms/housing/CBLemail-text.html
@@ -16,7 +16,7 @@
       <ul class="govuk-list">
         <li>Thank you for applying for council housing.</li>
         <li>We’ll write to you within 21 days.</li>
-        <li>The letter will confirm your housing registration number and priority on the housing list.</li>
+        <li>The letter will confirm your housing registration number and tell you your priority group.</li>
         <li>We may contact you sooner if we need extra information.</li>
         <li>Housing Services</li>
       </ul>
