--- a/app/views/forms/housing/CBLout.html
+++ b/app/views/forms/housing/CBLout.html
@@ -22,7 +22,7 @@
 </div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
-  <p>Change the sentence to what is on this screen</p>
+  <p>This screen is for exiting the service if you're under 16 or if you have been told you have no recourse to public founds</p>
 </div>
 
 {% endblock %}
