--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing 
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         {% from "checkboxes/macro.njk" import govukCheckboxes %}
@@ -21,7 +21,18 @@
           name: "reason-details",
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Give details"
+            text: "Give details of other reason"
+          }
+        }) }}
+        {% endset -%}
+
+        {% set poorHtml %}
+        {{ govukTextarea({
+          id: "reason2-details",
+          name: "reason2-details",
+          classes: "govuk-!-width-two-thirds",
+          label: {
+            text: "Give details of poor condition "
           }
         }) }}
         {% endset -%}
@@ -58,7 +69,7 @@
               },
               {
                 value: "Relationship problems",
-                text: "Relationship problems"
+                text: "Relationship or family problems"
               },
               {
                 value: "Domestic abuse",
@@ -75,6 +86,13 @@
               {
                 value: "Can’t afford to pay rent",
                 text: "Can’t afford to pay rent"
+              },
+              {
+                value: "Home in poor condition",
+                text: "Home in poor condition",
+                conditional: {
+                  html: poorHtml
+                }
               },
               {
                 value: "Home declared Below Tolerable Standard or has a closing order",
@@ -128,10 +146,10 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>one wording change for homeless</li>
-    <li>need at least one checked: Select at least one reason - or need to have a text in the "Give details" textbox for the Other reason option</li>
-    <li>routing changed: now going to house type instead of medical question</li>    
-    <li>validation: <span class="govuk-error-message">Select at least one reason for applying </span> <span class="UR-tag red">CHANGED</span></li>
+    <li>need at least one checked: Select at least one reason - or need to have a text in the "Give details" textboxes (Other reason and home in poor condition options)</li>
+    <li>validation: <span class="govuk-error-message">Select at least one reason for applying </span> <br>
+    <span class="govuk-error-message">Give details of other reason </span><br>
+    <span class="govuk-error-message">Give details of poor condition  </span> </li>
 </ul>
 </div>
 
