--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing <span class="UR-tag red">CHANGED</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -32,7 +32,7 @@
           name: "people-details",
           value: data['people-details'],
           label: {
-            text: "Give details of anyone not moving with you. Tell us their name, date of birth if you know it and relationship to you."
+            text: "Give details of anyone not moving with you. Tell us their name and relationship to you. Include their date of birth if you know it."
           }
         }) }}
         {% endset %}
@@ -78,7 +78,7 @@
   <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
   <li>if yes, then we need information in textboxes display</li>
-  <li>validation: <span class="govuk-error-message"> Confirm if you live with people who won’t be moving with you / Give details of situation / Give details of anyone not moving</span> <span class="UR-tag red">CHANGED</span></li>
+  <li>validation: <span class="govuk-error-message"> Confirm if you live with people who won’t be moving with you / Give details of situation / Give details of anyone not moving</span> </li>
   </ul>
 </div>
 
