improve colour page display and correct some content on medical form

--- a/app/views/forms/housing/medical/confirmation.html
+++ b/app/views/forms/housing/medical/confirmation.html
@@ -32,6 +32,8 @@
     <h3 class="govuk-heading-m">What happens next</h3>
     <p>Your application will be heard at the Medical Priority Assessment Panel. </p>
     <p>You will receive a letter detailing the outcome of the Medical Panel’s decision in due course. </p>
+    <p class="govuk-!-margin-top-9"><strong class="tag-print">Print this page</strong></p>
+    <p class="govuk-!-margin-bottom-2">&nbsp;</p>
     </div>
 </div>
 
