--- a/app/views/forms/housing/medical/declaration-error.html
+++ b/app/views/forms/housing/medical/declaration-error.html
@@ -30,7 +30,7 @@
                   }
               },
               errorMessage: {
-                text: "You need to check the box to confirm you read, understand and agree "
+                text: "Check the box to confirm you read, understand and agree "
               },
               items: [
               {
