--- a/app/views/forms/housing/medical/start.html
+++ b/app/views/forms/housing/medical/start.html
@@ -9,11 +9,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Medical priority application
+          Medical Priority Application
       </h1>
       <p><img src="{{ asset_path }}images/housing-logo.PNG" alt="Housing logo" style="height:95px; width:250px"></p>
       <p class="govuk-body-l">
-          If you are applying for Medical Priority for more than one person, a separate Medical Priority Application Form must be completed for each applicant.  
+          If you are applying for Medical Priority for more than one person, a form must be completed for each applicant.  
       </p>
 
       <h2 class="govuk-heading-m erc-text-blue">Before you start</h2>
@@ -22,9 +22,9 @@
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>your Housing application number</li>
-        <li>the name and dosage of your medication</li>
-        <li>your Disability benefit details</li>
-        <li>the name and address of your doctor and any consultant or clinic you attend</li>
+        <li>the name and dosage of medications</li>
+        <li>Disability benefit details</li>
+        <li>the name and address of doctors and any consultant or clinic attended</li>
       </ul>
       <p>
      
