--- a/app/views/forms/housing/medical/who.html
+++ b/app/views/forms/housing/medical/who.html
@@ -56,7 +56,7 @@
             },
             {
               value: "I'm completing this application on behalf of the applicant",
-              text: "I'm completing this application on behalf of the applicant",
+              text: "I'm completing this application for the applicant",
               conditional: {
                 html: detailsHtml
               }
