--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -1,7 +1,7 @@
  {% extends "layout-ERC.html" %} {% block pageTitle %} Colours {% endblock %} {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
+  <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-l">
       Colours
     </h1>
@@ -45,7 +45,7 @@
             #6f777b
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            Not really used for ERC yet but used in the prototype
+            used in the prototype, but not on the ERC live website yet
           </td>
         </tr>
 
@@ -90,7 +90,7 @@
             #2b8cc4
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            This is what we use in the prototype
+            used in the prototype
           </td>
         </tr>
         <tr class="app-colour-list-row">
@@ -103,7 +103,7 @@
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
               <span style="color: #ffffff; text-decoration: underline; background: #444 ; padding: 0 8px;">this looks like a link - hover</span><br>
-              not used in the prototype, not very accessible
+              not used in the prototype, not accessible
             </td>
           </tr>
 
@@ -156,7 +156,7 @@
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
               <span style="background-color: #444; text-decoration: underline; color: #b9ff06 ; padding: 0 8px;">ERC link - focus/active</span><br>
-              not used in the prototype, not very accessible and not consistent with other focus visuals
+              not used in the prototype, not accessible and not consistent with other focus visuals
             </td>
           </tr>
 
@@ -210,7 +210,7 @@
               #b30000
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-              Use for error messages - and border
+              Used for error messages - and border
             </td>
           </tr>
 
