create alternative version for equality questionnaire

--- a/app/views/forms/equal-opportunities/orientation.html
+++ b/app/views/forms/equal-opportunities/orientation.html
@@ -48,7 +48,7 @@ Sexual orientation - Equality and diversity
             },
             {
               value: "Heterosexual",
-              text: "Heterosexual"
+              text: "Heterosexual/Straight"
             },
             {
               value: "Other",
@@ -74,7 +74,7 @@ Sexual orientation - Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>sorted in alphabetical order - to test</li>
+    <li>sorted in alphabetical order - Added Straight to Heterosexual option as it can be a more common term for some users</li>
     </ul>
   </div>
   <div class="IT-notes-box">
