--- a/app/views/forms/equal-opportunities/ethnic-origin.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin.html
@@ -175,7 +175,7 @@ Ethnic origin - Equality and diversity
         name: "ethnic",
         fieldset: {
             legend: {
-            text: "How do you describe your ethic group?",
+            text: "How do you describe your ethnic group?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
