add some changes after disucssion for content

--- a/app/views/forms/equal-opportunities/ethnic-origin2.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin2.html
@@ -53,19 +53,19 @@ Ethnic group - Equality and diversity
         items: [
             {
             value: "Arab",
-            text: "Arab, Arab British, Arab Scottish"
+            text: "Arab"
             },
             {
             value: "asian",
-            text: "Asian, Asian British, Asian Scottish"
+            text: "Asian"
             },
             {
             value: "black",
-            text: "Black, Black British, Black Scottish"
+            text: "Black"
             },
             {
             value: "white",
-            text: "White, White British, White Scottish"
+            text: "White"
             },
             {
             value: "mixed",
