--- a/app/views/forms/equal-opportunities/identity2.html
+++ b/app/views/forms/equal-opportunities/identity2.html
@@ -32,7 +32,7 @@ Identity - Equality and diversity
             name: "identity",
             fieldset: {
                 legend: {
-                text: "Identity",
+                text: "Nationality",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--m"
                 }
