--- a/app/views/forms/equal-opportunities/start2.html
+++ b/app/views/forms/equal-opportunities/start2.html
@@ -35,8 +35,8 @@ Equality and diversity
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li><strong>add Scottish and British to the ethnic group category and make this the first question</strong></li>
-    <li>ask for identity next</li>
+    <li><strong> Ethnic group question is the first question now</strong></li>
+    <li>ask for identity next - but say nationality instead. Is this really needed?</li>
     <li>add straight to the option Heterosexual</li>
     <li>see the version I tested before this one <a href="/forms/equal-opportunities/start1">start page</a></li>
     <li>see an example on the  <a href="https://volunteer.samaritans.org/volunteer/other-support/birmingham/enquire-non-pilot" target="_blank">Samaritans Website</a></li>
